# soposerve

./: .gitignore  CONTRIBUTING  Dockerfile  LICENSE  README.md  config.json  docker-compose.yml  pyproject.toml
.github/workflows/: formatting.yml  release.yml  test.yml
examples/: .gitignore  cleanup.sh  simpledelete.py  simpledeletecoll.py  simplepopulate.py  simpleserve.py  simpleupload.py
examples/aiola/: getdata.sh  simple_crud_coadd.py  simplepopulate.py
examples/coulton/: .gitignore  cleanup.sh  getdata.sh  simplepopulate.py
examples/hervias_caimapo/: cleanup.sh  getdata.sh  simplepopulate.py
examples/hilton/: cleanup.sh  getdata.sh  simplepopulate.py
examples/recursive_collection/: simplepopulate.py
hippoclient/: __init__.py  caching.py  cli.py  collections.py  core.py  helper.py  product.py  relationships.py  textedit.py  textedit.tcss
hippometa/: __init__.py  base.py  beam.py  catalog.py  map.py  mapset.py  numeric.py  simple.py
hipposerve/: settings.py
hipposerve/api/: __init__.py  app.py  auth.py  product.py  relationships.py  users.py
hipposerve/api/models/: product.py  relationships.py  users.py
hipposerve/database/: __init__.py
hipposerve/service/: __init__.py  collection.py  product.py  storage.py  users.py  utils.py  versioning.py
hipposerve/storage/: __init__.py
hipposerve/web/: __init__.py  auth.py  router.py  search.py
hipposerve/web/templates/: 404.html  apikey.html  collection.html  compliance_form.html  core.html  index.html  login.html  navigation.html  parent_child_diagram.html  product.html  search_metadata.html  search_results.html  user.html
sopoclient/: __init__.py  caching.py  cli.py  collections.py  core.py  helper.py  product.py  relationships.py  tui.py
sopometa/: __init__.py  map.py  simple.py
soposerve/: settings.py
soposerve/api/: __init__.py  app.py  auth.py  product.py  relationships.py  users.py
soposerve/api/models/: product.py  relationships.py  users.py
soposerve/database/: __init__.py  metadata.py
soposerve/service/: __init__.py  collection.py  product.py  storage.py  users.py  versioning.py
soposerve/storage/: __init__.py
soposerve/web/: __init__.py
soposerve/web/templates/: collection.html  index.html  product.html
tests/: conftest.py
tests/test_api/: conftest.py  test_product_api.py  test_relationship_api.py  test_users_api.py
tests/test_client/: conftest.py  test_cache.py  test_create_product.py
tests/test_services/: conftest.py  test_collection_service.py  test_product_service.py  test_storage_service.py  test_user_service.py  test_versioning.py
tests/test_storage/: test_storage.py
