[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude=["*tests*", "*examples*", "*htmlcov*"]

[project]
name = "soposerve"
version = "0.0.1a1"
requires-python = ">=3.11"
dependencies = [
    "pydantic",
    "pydantic-settings",
    # 4.1.0 and above introduce a deprecation warning
    # that breaks the latest versions of asyncer.
    "anyio<4.1.0",
    "asyncer",
    "fastapi",
    "uvicorn",
    "beanie",
    "minio",
    "jinja2",
    "xxhash",
    "jinja-markdown",
    "typer",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "testcontainers",
    "coverage",
    "pytest-cov",
    "pytest-asyncio"
]
astro = [
    "astropy"
]

[project.scripts]
sopo = "sopoclient.cli:main"

[tool.ruff.lint]
extend-select = ["I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.coverage.run]
source = [
    "soposerve",
]
omit = [
    "soposerve/web/*"
]
